# hostsfile

./: .gitignore  .travis.yml  AUTHORS.txt  BUILD.bazel  LICENSE  Makefile  WORKSPACE  cmd.go  cmd_test.go  cmd_unix.go  cmd_windows.go  hostsfile.go  hostsfile_test.go  readme.md
.github/workflows/: ci.yml
lib/: BUILD.bazel  hostsfile.go  hostsfile_nonwindows.go  hostsfile_plan9.go  hostsfile_test.go  hostsfile_unix.go  hostsfile_windows.go
