load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cmd.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "cmd_unix.go",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "cmd_unix.go",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "cmd_windows.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/kevinburke/hostsfile",
    visibility = ["//visibility:private"],
    deps = ["//lib:go_default_library"],
)

go_binary(
    name = "hostsfile",
    importpath = "github.com/kevinburke/hostsfile",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
