load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hostsfile.go",
        "hostsfile_nonwindows.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "hostsfile_unix.go",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "hostsfile_unix.go",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "hostsfile_windows.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/kevinburke/hostsfile/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["hostsfile_test.go"],
    importpath = "github.com/kevinburke/hostsfile/lib",
    library = ":go_default_library",
)
