load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hostsfile.go",
        "hostsfile_nonwindows.go",
        "hostsfile_plan9.go",
        "hostsfile_unix.go",
        "hostsfile_windows.go",
    ],
    importpath = "github.com/kevinburke/hostsfile/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["hostsfile_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/kevinburke/hostsfile/lib",
)
